--- a/vercel.json
+++ b/vercel.json
@@ -16,5 +16,5 @@
     }
   ],
   "buildCommand": "npm run build",
-  "installCommand": "npm install --legacy-peer-deps"
+  "installCommand": "npm install"
 }
